# src/Ai.Tlbx.MidTerm/openapi/openapi.json
@@ -1294,7 +1294,8 @@
           "devMode",
           "features",
           "voicePassword",
-          "gitVersion"
+          "gitVersion",
+          "codeSigned"
         ],
         "type": "object",
         "properties": {
@@ -1371,6 +1372,9 @@
               "null",
               "string"
             ]
+          },
+          "codeSigned": {
+            "type": "boolean"
           }
         }
       },
